--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
   },
   "dependencies": {
     "reveal-multiplex": "^0.1.0",
-    "reveal.js-menu": "^2.1.0"
+    "reveal.js-menu": "^2.1.0",
+    "socket.io": "~0.9.13"
   }
 }
