--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/hakimel/reveal.js.git"
+    "url": "git://github.com/Triad-0112/Kelompok-4.git"
   },
   "engines": {
     "node": ">=10.0.0"
